# LV_ODE_PDE

./: .gitignore  README.md
PDEs/: CMakeLists.txt  animation.gnu  compile_commands.json  main.py  main_debug.py
PDEs/.cache/clangd/index/: ETD2_solver.cpp.1738FC3C98EF1ABD.idx  ETD2_solver.cpp.DD6FB98BBC491D7B.idx  ETD2_solver.h.0BB989B119C1DE76.idx  ETD2_solver.h.468777232C719761.idx  fft_test.cpp.4F7395F96DAB0E2D.idx  fft_test.cpp.52AAF80D553AA176.idx  solve.cpp.C9CCEA4908468A0B.idx  solve.cpp.D900E16C79D129E1.idx
PDEs/backup/include/: ETD2_solver.h
PDEs/backup/src/: ETD2_solver.cpp
PDEs/cpp_test/: CMakeLists.txt  fft_test.cpp  main.cpp
PDEs/cpp_test/.cache/clangd/index/: fft_test.cpp.2894A8BA79A1265A.idx  solve.cpp.B9BF701B48EEF750.idx
PDEs/cpp_test/src/: fft_test.cpp  solve.cpp
PDEs/include/: DESolver.h  ETD2_solver.h  iohandler.h  programs.h  theory.h
PDEs/log_scale/: main.py
PDEs/scripts/: animate.py  compute_std.py  plot.gp  plot.py  plot_k_u.py  plot_k_v.py
PDEs/src/: DESolver.cpp  ETD2_solver.cpp  debugging.cpp  solve.cpp  testing.cpp
mean_field/: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
mean_field/.cache/clangd/index/: DESolver.cpp.4B4B036209D37CA4.idx  DESolver.cpp.D847508C519A775E.idx  DESolver.cpp.EA9F04D37317372F.idx  DESolver.h.239007A5E0DDE63E.idx  DESolver.h.3FF8E44CEA58CD7A.idx  DESolver.h.F9EA44DABE3E6EAF.idx  ODE_solver.cpp.20610822C6F41394.idx  ODE_solver.cpp.E6D6A4391FD28909.idx  chaos_diagram.cpp.8A217868A684CAB4.idx  chaos_diagram.cpp.BEA7FBFF5F5C2390.idx  debugging_test.cpp.17AE6D71CDB3AB13.idx  debugging_test.cpp.EA22391F1A0045D7.idx  fm.cpp.ED95A48CD494DD5B.idx  fm.cpp.FC23F40788ED5EA8.idx  homotopy.cpp.2B5DB85A79201A49.idx  homotopy.cpp.E022CBE1179315E7.idx  main.cpp.240402F0967C02D1.idx  main.cpp.9B346B9B38DD9E74.idx  main.cpp.BE4B337553F10D45.idx  main.cpp.D6F9FF11DFA75075.idx  phase.h.1D6A06E45E294DF8.idx  phase.h.66B19488F217AA20.idx  phase.h.7070AC62E5B8FB10.idx  testing.cpp.3792F3D74ABB262B.idx  testing.cpp.A76B3B212EC0A0D4.idx  testing.cpp.D2BDFD0CCA436613.idx
mean_field/Analytical_solution/: getting_general_equation.py  numerical_solve.ipynb  numerical_solve.py
mean_field/Analytical_solution/small_kappa_expansion/: main.ipynb
mean_field/Mathematica/: theory.wl
mean_field/data_analysis/chaos_diagram/: main.cpp
mean_field/data_analysis/floquet_multipliers/: main.cpp
mean_field/data_analysis/floquet_multipliers/new_par/: main.cpp
mean_field/data_analysis/floquet_multipliers/one_par_test/: main.cpp
mean_field/data_analysis/homotopy/: main.cpp
mean_field/fm_debugging_test/: main.cpp
mean_field/include/: DESolver.h  iohandler.h  phase.h  programs.h  theory.h
mean_field/plots/: H_tongue.eps  H_tongue.gnu  SH_tongue.eps  SH_tongue.gnu
mean_field/plots/a0_vs_b0/: n=0.5.eps  n=0.5.gnu  n=1.eps  n=1.gnu
mean_field/plots/bifrucation/: a0=1_b0=1_k0=0.246_k1=0.21_n=0.5.eps  a0=1_b0=1_k0=0.246_k1=0.21_n=1.eps  a0=1_b0=1_k0=0.246_k1=0.23_n=0.5.eps  a0=1_b0=1_k0=0.246_k1=0.23_n=0.666667.eps  a0=1_b0=1_k0=0.246_k1=0.23_n=0.67.eps  a0=5_b0=0.18_k0=0.095_k1=0.02_n=0.5.eps  a0=5_b0=0.18_k0=0.095_k1=0.03_n=0.5.eps  a0=5_b0=0.18_k0=0.095_k1=0.06_n=1.06.eps  a0=5_b0=0.18_k0=0.095_k1=0.06_n=1.eps  a0=5_b0=0.18_k0=0.095_k1=0.07_n=1.eps  plots.gnu
mean_field/plots/thesis_bifurcation/: below_tongue.eps  below_tongue.gnu  in_tongue.eps  in_tongue.gnu
mean_field/scripts/: generate_varying_fixed_point.py  heat_stroboscopic.ipynb  overlay_vector_field.ipynb  plot_periods.ipynb  vector_field.ipynb
mean_field/scripts/.ipynb_checkpoints/: plot_periods-checkpoint.ipynb
mean_field/scripts/draft_plots/: chaotic_bifurcation.py  orbit_charos.py
mean_field/src/: DESolver.cpp  ODE_solver.cpp  chaos_diagram.cpp  debugging_test.cpp  fm.cpp  homotopy.cpp  main.cpp  testing.cpp
python_mean_field/: parametric_LV.ipynb
python_mean_field/.ipynb_checkpoints/: parametric_LV-checkpoint.ipynb
